# PlayChessNotation

./: CMakeLists.txt  README.md
include/: Board.h  Game.h  Move.h  Piece.h  Player.h  header1.h  header2.h
src/: Board.cpp  Game.cpp  Move.cpp  Piece.cpp  Player.cpp  file1.cpp  file2.cpp  file3.cpp  main.cpp
